--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ source:
   path: ../
 
 build:
-  number: 1
+  number: 3
   noarch: python
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
@@ -17,10 +17,10 @@ requirements:
     - matplotlib
     - jupyter
     - pylint
-    - python <=3.7
+    - python ==3.7
   host:
     - python
     - setuptools
 test:
   imports:
-    - YADDUM
+    - yaddum
